--- a/Hotpink/Hotpink.csproj
+++ b/Hotpink/Hotpink.csproj
@@ -56,7 +56,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="hotpink.wav">
+    <Content Include="hotpinkmono.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="pi.ico" />
