--- a/Hotpink/Hotpink.csproj
+++ b/Hotpink/Hotpink.csproj
@@ -38,6 +38,9 @@
   <PropertyGroup>
     <ApplicationIcon>pi.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -59,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="pi.ico" />
